...
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2fS-Co-p9A" customClass="WYMaterialButton" customModule="WhatsBumpin" customModuleProvider="target">
                    <rect key="frame" x="281.5" y="165" width="30" height="30"/>
                    <constraints>
                        <constraint firstAttribute="width" secondItem="2fS-Co-p9A" secondAttribute="height" id="1c1-pZ-XR2"/>
                        <constraint firstAttribute="height" constant="30" id="pgf-Pj-q9U"/>
                    </constraints>
                    <state key="normal" image="Night Time"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                            <real key="value" value="0.0"/>
                        </userDefinedRuntimeAttribute>
                        <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
                            <real key="value" value="0.0"/>
...
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zdT-ft-4yR" customClass="WYMaterialButton" customModule="WhatsBumpin" customModuleProvider="target">
                    <rect key="frame" x="351.5" y="165" width="30" height="30"/>
                    <constraints>
                        <constraint firstAttribute="width" secondItem="zdT-ft-4yR" secondAttribute="height" id="wPc-oZ-ZJ2"/>
                    </constraints>
                    <state key="normal" image="Food"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                            <real key="value" value="0.0"/>
                        </userDefinedRuntimeAttribute>
                    </userDefinedRuntimeAttributes>
                    <connections>
...
                </view>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rKJ-hI-6jV" customClass="WYMaterialButton" customModule="WhatsBumpin" customModuleProvider="target">
                    <rect key="frame" x="211.5" y="165" width="30" height="30"/>
                    <constraints>
                        <constraint firstAttribute="width" secondItem="rKJ-hI-6jV" secondAttribute="height" id="H18-7u-JJd"/>
                    </constraints>
                    <state key="normal" image="Day Time"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                            <real key="value" value="0.0"/>
                        </userDefinedRuntimeAttribute>
                    </userDefinedRuntimeAttributes>
                    <connections>
...
