...
    NSLog(@"bc: %ld", _bumpCount);
    [((LocationInformationViewController*)segue.destinationViewController).bumpLabel setText:[NSString stringWithFormat:@"%ld", (long)self.bumpCount]];
}

- (void)showFilterView:(id)sender
{
    [((UIButton *)sender) setTitle:@"Apply" forState:UIControlStateNormal];
    [UIView transitionWithView:self.filterView duration:0.5 options:UIViewAnimationOptionTransitionCrossDissolve animations:^(void){
        [self.filterView setHidden:false];
    } completion:nil];
}

- (void)applyFilters:(id)sender
{
    [self getLocationsForUser];
    [((UIButton *)sender) setTitle:@"Filter" forState:UIControlStateNormal];
    [UIView transitionWithView:self.filterView duration:0.5 options:UIViewAnimationOptionTransitionCrossDissolve animations:^(void){
        [self.filterView setHidden:true];
    } completion:nil];
}

- (Location *)getClosestLocation {
...
